// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Close 1`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
  </div>
</DocumentFragment>
`;

exports[`Close 2`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
    <div
      class="popover__content"
      style="position: fixed; top: 0px; left: 0px;"
    >
      Text render
      <svg
        height="11.999999999999998"
        preserveAspectRatio="xMaxYMax"
        style="position: absolute; top: 0px; left: 0px; transform: translateX(-50%);"
        viewBox="0 0 11.999999999999998 6"
        width="11.999999999999998"
      >
        <path
          d="M 0 6 H 11.999999999999998 C 6.749999999999999 0.75 5.999999999999999 0 5.999999999999999 0 C 5.999999999999999 0 5.249999999999999 0.75 0 6"
          fill="var(--tooltip-background-color)"
          stroke="black"
          stroke-width="0"
        />
        <path
          d="M 0 6 H 11.999999999999998 L 11.999999999999998 6 H 0 Z"
          fill="var(--tooltip-background-color)"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Close 3`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default use 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Default use 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
  <div
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
    <svg
      height="11.999999999999998"
      preserveAspectRatio="xMaxYMax"
      style="position: absolute; top: 0px; left: 0px; transform: translateX(-50%);"
      viewBox="0 0 11.999999999999998 6"
      width="11.999999999999998"
    >
      <path
        d="M 0 6 H 11.999999999999998 C 6.749999999999999 0.75 5.999999999999999 0 5.999999999999999 0 C 5.999999999999999 0 5.249999999999999 0.75 0 6"
        fill="var(--tooltip-background-color)"
        stroke="black"
        stroke-width="0"
      />
      <path
        d="M 0 6 H 11.999999999999998 L 11.999999999999998 6 H 0 Z"
        fill="var(--tooltip-background-color)"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Element 1`] = `
<DocumentFragment>
  <a
    href="#"
  >
    Text trigger
  </a>
</DocumentFragment>
`;

exports[`Element 2`] = `
<DocumentFragment>
  <a
    href="#"
  >
    Text trigger
  </a>
  <div
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
    <svg
      height="11.999999999999998"
      preserveAspectRatio="xMaxYMax"
      style="position: absolute; top: 0px; left: 0px; transform: translateX(-50%);"
      viewBox="0 0 11.999999999999998 6"
      width="11.999999999999998"
    >
      <path
        d="M 0 6 H 11.999999999999998 C 6.749999999999999 0.75 5.999999999999999 0 5.999999999999999 0 C 5.999999999999999 0 5.249999999999999 0.75 0 6"
        fill="var(--tooltip-background-color)"
        stroke="black"
        stroke-width="0"
      />
      <path
        d="M 0 6 H 11.999999999999998 L 11.999999999999998 6 H 0 Z"
        fill="var(--tooltip-background-color)"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Hover 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Hover 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Render function 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Render function 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
  <div
    class="popover__content"
    style="position: fixed; top: 0px; left: 0px;"
  >
    Text render
    <svg
      height="11.999999999999998"
      preserveAspectRatio="xMaxYMax"
      style="position: absolute; top: 0px; left: 0px; transform: translateX(-50%);"
      viewBox="0 0 11.999999999999998 6"
      width="11.999999999999998"
    >
      <path
        d="M 0 6 H 11.999999999999998 C 6.749999999999999 0.75 5.999999999999999 0 5.999999999999999 0 C 5.999999999999999 0 5.249999999999999 0.75 0 6"
        fill="var(--tooltip-background-color)"
        stroke="black"
        stroke-width="0"
      />
      <path
        d="M 0 6 H 11.999999999999998 L 11.999999999999998 6 H 0 Z"
        fill="var(--tooltip-background-color)"
      />
    </svg>
  </div>
</DocumentFragment>
`;
